--- a/index.html
+++ b/index.html
@@ -3,93 +3,149 @@
 <head>
     <meta charset="UTF-8">
     <title>Andres's Resume</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
-    <h1>My Resume</h1>
-    <h2>Andres Arias</h2>
-    <img src="./assets/Foto.jpg" height="200">
-    <p>Highly organized and detail oriented with 5+ years of experience in workforce planning, scheduling, and performance management.</p>
-    <p>Proven ability to drive organizational success through strategic workforce planning and development.</p>
-    <p>Expertise in using data and analytics to optimize workforce performance and reduce costs. </p>
-    <p>Seeking a data analyst position in a dynamic organization where I can use my skills and experience to drive and achieve organizational goals.</p>
-    <hr />
-    <h3>Education</h3>
-    <p>
-    ACADEMIC BACHELOR<br /> 
-    DEC 2007<br />
-    Academic college with emphasis on cutting-edge knowledge
-    </p>
-    <h3>Work experience </h3>
-    <p>
-    WORKFORCE MANAGER AT WEBHELP ONELINK <br /> 
-    MAY 2023 – OCT 2023 <br /> 
-        <ul>
-            <li>Developed and implemented workforce plans that resulted in a reduction in labor costs.</li> 
-            <li>Increased employee productivity by developing and implementing new training and development programs. </li>
-            <li>Reduced employee turnover by creating and implementing employee engagement initiatives.</li>
-        </ul>
-    </p>  
-    <p>
-    COORDINATOR AT WEBHELP ONELINK <br /> 
-    MAY 2021 – MAY 2023 <br /> 
-        <ul>
-            <li>Developed and implemented workforce schedules that ensured adequate staffing levels and met operational needs.</li> 
-            <li>Coordinated the on-boarding and training of new employees.</li> 
-            <li>Prepared and presented workforce reports to senior management.</li> 
-            <li>Designed and implemented a new office layout that improved workflow and increased efficiency</li> 
-        </ul>
-    </p> 
-    <p>
-    SUPERVISOR AT WEBHELP ONELINK <br /> 
-    NOV 2020 – MAY 2021 <br /> 
-        <ul>
-            <li>Managed employee records and payroll data.</li>
-            <li>Analyzed workforce data and trends to identify areas for improvement.</li> 
-            <li>Developed and implemented performance management plans for team members.</li> 
-            <li>Resolved employee conflicts quickly and effectively.</li> 
-            <li>Demonstrated a strong work ethic, resulting in being promoted to coordinator after 5 months</li> 
-        </ul>
-    </p>
-    <p>
-    ANALYST AT WEBHELP ONELINK <br /> 
-    FEB 2018 – NOV 2020 <br /> 
-        <ul>
-            <li>Reduced billing errors by conducting regular billing audits and identifying AOO.</li> 
-            <li>Increased billing efficiency by developing and implementing new billing procedures.</li> 
-            <li>Prepared and presented financial reports to senior management that provided insights into the organization's financial health</li>
-        </ul>
-    </p>
-    <h3>Skills</h3>
-        <ul>
-            <li>Teamwork ⭐️⭐️⭐️⭐️⭐️</li>
-            <li>Excel ⭐️⭐️⭐️⭐️⭐️</li>
-            <li>Customer Service ⭐️⭐️⭐️⭐️⭐️</li>
-            <li>Business Analysis ⭐️⭐️⭐️⭐️</li>
-            <li>Time Management ⭐️⭐️⭐️⭐️</li>
-        </ul>
-    <h3>Language</h3>
-        <ul>
-            <li>Spanish ⭐️⭐️⭐️⭐️⭐️</li>
-            <li>English ⭐️⭐️⭐️⭐️</li>
-        </ul>
-    <h3>Certifications</h3>
-    <p>
-    ICDL CERTIFICATION <br /> 
-    SEP 2007 <br /> 
-    Designed to build the critical digital skills of the modern 
-    workplace:  <br /> 
-        <ul>
-            <li>Word </li>
-            <li>Power Point </li>
-            <li>IT Basic concepts </li>
-            <li>WIN XP </li>
-        </ul>
-    </p>
-<hr />
-<a href="./public/Hobbies.html">Hobbies</a>
-<a href="./public/Contact.html">Contact Me</a>
+
+<secion id="header">
+<div class="container">
+    <div class="row px-1 pt-2">
+        <div class="col">
+        <img src="./img/HD_Pic.jpg" class="d-block img-fluid" alt="Foto hoja de vida" width="200" loading="lazy">
+        <h1 class="fw-bold">Andres Arias Cogollo</h1>
+        <p class="lead">Highly organized and detail oriented with 5+ years of experience in workforce planning, scheduling, and performance management.</p>
+        <p class="lead">Proven ability to drive organizational success through strategic workforce planning and development.</p>
+        <p class="lead">Expertise in using data and analytics to optimize workforce performance and reduce costs.</p>
+        </div>
+    </div>
+</div>  
+</secion>
+
+<secion id="skills">
+<div class="container">
+    <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner ">
+          <div class="carousel-item active "><img src="./img/3.jpg" class="d-block" alt="soft-skills" height="500"></div>
+          <div class="carousel-item"><img src="./img/1.jpg" class="d-block" alt="Hard-skills" height="500"></div>
+          <div class="carousel-item"><img src="./img/2.jpg" class="d-block" alt="language-skills" height="500"></div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+</div>
+</secion>
+
+<secion id="experience">
+<div class="container py-5">
+    <h2 class="pb-2 border-bottom">Work Experience</h2>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">WORKFORCE MANAGER AT WEBHELP ONELINK</h5>
+                <h6 class="card-title">MAY 2023 – OCT 2023</h6>
+                <ul>
+                <li>Developed and implemented workforce plans that resulted in a reduction in labor costs.</li> 
+                <li>Increased employee productivity by developing and implementing new training and development programs. </li>
+                <li>Reduced employee turnover by creating and implementing employee engagement initiatives.</li>
+                </ul>
+
+                <h5 class="card-title">COORDINATOR AT WEBHELP ONELINK</h5>
+                <h6 class="card-title">MAY 2021 – MAY 2023</h6>
+                <ul>
+                <li>Developed and implemented workforce schedules that ensured adequate staffing levels and met operational needs.</li> 
+                <li>Coordinated the on-boarding and training of new employees.</li> 
+                <li>Prepared and presented workforce reports to senior management.</li> 
+                <li>Designed and implemented a new office layout that improved workflow and increased efficiency</li> 
+                </ul>
+
+                <h5 class="card-title">SUPERVISOR AT WEBHELP ONELINK</h5>
+                <h6 class="card-title">NOV 2020 – MAY 2021</h6>
+                <ul>
+                <li>Managed employee records and payroll data.</li>
+                <li>Analyzed workforce data and trends to identify areas for improvement.</li> 
+                <li>Developed and implemented performance management plans for team members.</li> 
+                <li>Resolved employee conflicts quickly and effectively.</li> 
+                <li>Demonstrated a strong work ethic, resulting in being promoted to coordinator after 5 months</li> 
+                </ul>
+
+                <h5 class="card-title">ANALYST AT WEBHELP ONELINK</h5>
+                <h6 class="card-title">FEB 2018 – NOV 2020</h6>
+                <ul>
+                <li>Reduced billing errors by conducting regular billing audits and identifying AOO.</li> 
+                <li>Increased billing efficiency by developing and implementing new billing procedures.</li> 
+                <li>Prepared and presented financial reports to senior management that provided insights into the organization's financial health</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+</secion>
+
+<secion id="Education">
+    <div class="container px-4 py-5" id="hanging-icons">
+        <h2 class="pb-2 border-bottom">Education</h2>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-backpack" viewBox="0 0 16 16">
+                    <path d="M4.04 7.43a4 4 0 0 1 7.92 0 .5.5 0 1 1-.99.14 3 3 0 0 0-5.94 0 .5.5 0 1 1-.99-.14M4 9.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5zm1 .5v3h6v-3h-1v.5a.5.5 0 0 1-1 0V10z"/>
+                    <path d="M6 2.341V2a2 2 0 1 1 4 0v.341c2.33.824 4 3.047 4 5.659v5.5a2.5 2.5 0 0 1-2.5 2.5h-7A2.5 2.5 0 0 1 2 13.5V8a6 6 0 0 1 4-5.659M7 2v.083a6 6 0 0 1 2 0V2a1 1 0 0 0-2 0m1 1a5 5 0 0 0-5 5v5.5A1.5 1.5 0 0 0 4.5 15h7a1.5 1.5 0 0 0 1.5-1.5V8a5 5 0 0 0-5-5"/>
+                  </svg>
+            </div>
+            <div class="fs-4 text-body-emphasis">
+                <h3>ACADEMIC BACHELOR</h3>
+                <h3>DEC 2007</h3>
+                <p>Academic college with emphasis on cutting-edge knowledge</p>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-backpack2" viewBox="0 0 16 16">
+                    <path d="M4.04 7.43a4 4 0 0 1 7.92 0 .5.5 0 1 1-.99.14 3 3 0 0 0-5.94 0 .5.5 0 1 1-.99-.14"/>
+                    <path fill-rule="evenodd" d="M4 9.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5zm1 .5v3h6v-3h-1v.5a.5.5 0 0 1-1 0V10z"/>
+                    <path d="M6 2.341V2a2 2 0 1 1 4 0v.341c2.33.824 4 3.047 4 5.659v1.191l1.17.585a1.5 1.5 0 0 1 .83 1.342V13.5a1.5 1.5 0 0 1-1.5 1.5h-1c-.456.607-1.182 1-2 1h-7a2.5 2.5 0 0 1-2-1h-1A1.5 1.5 0 0 1 0 13.5v-2.382a1.5 1.5 0 0 1 .83-1.342L2 9.191V8a6 6 0 0 1 4-5.659M7 2v.083a6 6 0 0 1 2 0V2a1 1 0 0 0-2 0M3 13.5A1.5 1.5 0 0 0 4.5 15h7a1.5 1.5 0 0 0 1.5-1.5V8A5 5 0 0 0 3 8zm-1-3.19-.724.362a.5.5 0 0 0-.276.447V13.5a.5.5 0 0 0 .5.5H2zm12 0V14h.5a.5.5 0 0 0 .5-.5v-2.382a.5.5 0 0 0-.276-.447L14 10.309Z"/>
+                  </svg>
+            </div>
+            <div class="fs-4 text-body-emphasis">
+                <h3>ICDL CERTIFICATION</h3>
+                <h3>SEP 2007</h3>
+                <p> Designed to build the critical digital skills of the modern workplace:</p>
+                <ul>
+                <li>Word </li>
+                <li>Power Point </li>
+                <li>IT Basic concepts </li>
+                <li>WIN XP </li>
+                </ul>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-backpack4" viewBox="0 0 16 16">
+                    <path d="M4 9.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5zm1 .5v3h6v-3h-1v.5a.5.5 0 0 1-1 0V10z"/>
+                    <path d="M8 0a2 2 0 0 0-2 2H3.5a2 2 0 0 0-2 2v1c0 .52.198.993.523 1.349A.5.5 0 0 0 2 6.5V14a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V6.5a.5.5 0 0 0-.023-.151c.325-.356.523-.83.523-1.349V4a2 2 0 0 0-2-2H10a2 2 0 0 0-2-2m0 1a1 1 0 0 0-1 1h2a1 1 0 0 0-1-1M3 14V6.937q.24.062.5.063h4v.5a.5.5 0 0 0 1 0V7h4q.26 0 .5-.063V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1m9.5-11a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1h-9a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1z"/>
+                  </svg>
+            </div>
+            <div class="fs-4 text-body-emphasis">
+                <h3>ACADEMIC BACHELOR</h3>
+                <h3>DEC 2007</h3>
+                <p>Academic college with emphasis on cutting-edge knowledge</p>
+            </div>
+          </div>
+        </div>
+    </div>
+</secion>
+
+<secion id="header"></secion>
+
 <footer>
-    <p>© 2024 Sediur Corp. All rights reserved.</p>
+    <p>© 2024. All rights reserved.</p>
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
