--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <div class="container">
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner ">
-          <div class="carousel-item active "><img src="./img/3.jpg" class="d-block img-fluid" alt="soft-skills" height="500"></div>
-          <div class="carousel-item"><img src="./img/1.jpg" class="d-block img-fluid" alt="Hard-skills" height="500"></div>
-          <div class="carousel-item"><img src="./img/2.jpg" class="d-block img-fluid" alt="language-skills" height="500"></div>
+          <div class="carousel-item active "><img src="./img/3.jpg" class="d-block img-fluid" alt="soft-skills"></div>
+          <div class="carousel-item"><img src="./img/1.jpg" class="d-block img-fluid" alt="Hard-skills"></div>
+          <div class="carousel-item"><img src="./img/2.jpg" class="d-block img-fluid" alt="language-skills"></div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
