--- a/English.html
+++ b/English.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Currículum_Andres</title>
+  <title>Andres's Resume</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css"/>
 </head>
@@ -12,34 +12,33 @@
   <div class="row">
     <ul class="nav my-1 justify-content-md-end">
       <li>
-      <a href="./English.html" class="nav-link text-secondary ">
+      <a href="./index.html" class="nav-link text-secondary ">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-translate" viewBox="0 0 16 16">
       <path d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286zm1.634-.736L5.5 3.956h-.049l-.679 2.022z"/>
       <path d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zm7.138 9.995q.289.451.63.846c-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6 6 0 0 1-.415-.492 2 2 0 0 1-.94.31"/>
       </svg>
-      English
+      Español
       </a>
       </li>
       <li>
-      <a href="./cover_letter_SP.html" class="nav-link text-secondary">
+      <a href="./cover_letter.html" class="nav-link text-secondary">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-card-text" viewBox="0 0 16 16">
       <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2z"/>
       <path d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8m0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5"/>
       </svg>
-      Carta
+      Cover Letter
       </a>
       </li>
       <li>
-      <a href="./hobbies_SP.html" class="nav-link text-secondary">
+      <a href="./hobbies.html" class="nav-link text-secondary">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-activity" viewBox="0 0 16 16">
       <path fill-rule="evenodd" d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2"/>
       </svg>
-      Pasatiempos
+      Hobbies
       </a>
-      </li>
       <li class="nav-item dropdown fw-bold " data-bs-theme="dark">
         <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          <mark class="fw-bold rounded px-5"> Contacto</mark>
+          <mark class="fw-bold rounded px-5"> Contact</mark>
         </a>
         <ul class="dropdown-menu px-3">
         <li>+34 624671786</li>
@@ -47,7 +46,6 @@
         </ul>
       </li>
     </ul>
-
   </div>
 </div>
 </secion>
@@ -56,14 +54,14 @@
 <div class="container">
   <div class="row px-1 py-1">
     <div class="col-xl-2">
-    <img src="./img/HD_Pic.jpg" class="d-block pr-3 rounded" alt="foto de andres" width="200" loading="lazy">
+    <img src="./img/HD_Pic.jpg" class="d-block pr-3 rounded" alt="CC Photo" width="200" loading="lazy">
     </div>
     <div class="col-xl-10">
     <h1 class="fw-bold">Andres Arias Cogollo</h1>
-    <h2 class="lead">Altamente organizado y orientado a los detalles, 5+ años de experiencia en planificación, programación y gestión de personal.</h2>
-    <h2 class="lead">Capacidad demostrada para impulsar el éxito organizacional a través de la planificación y el desarrollo estratégico.</h2>
-    <h2 class="lead">Experiencia en el uso y análisis de datos para optimizar el rendimiento de la fuerza laboral y reducir costos.</h2>
-    <h2 class="lead"><span style="color: purple; font-weight: 400;">Mi esencia:</span> Dedicado a un servicio al cliente excepcional.</h2>
+    <h2 class="lead">Highly organized and detail oriented with 5+ years of experience in workforce planning, scheduling, and management.</h2>
+    <h2 class="lead">Proven ability to drive organizational success through strategic workforce planning and development.</h2>
+    <h2 class="lead">Expertise in using data and analytics to optimize workforce performance and reduce costs.</h2>
+    <h2 class="lead"><span style="color: purple; font-weight: 400;">My core:</span> Dedicated to exceptional customer service.</h2>
     <h2 class="lead"></h2>
     </div>
   </div>
@@ -74,9 +72,9 @@
 <div class="container py-1">
   <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner ">
-      <div class="carousel-item active "><img src="./img/6.jpg" class="d-block img-fluid rounded" alt="soft-skills"></div>
-      <div class="carousel-item"><img src="./img/4.jpg" class="d-block img-fluid rounded" alt="hard-skills"></div>
-      <div class="carousel-item"><img src="./img/5.jpg" class="d-block img-fluid rounded" alt="language-skills"></div>
+      <div class="carousel-item active "><img src="./img/3.jpg" class="d-block img-fluid rounded" alt="soft-skills"></div>
+      <div class="carousel-item"><img src="./img/1.jpg" class="d-block img-fluid rounded" alt="hard-skills"></div>
+      <div class="carousel-item"><img src="./img/2.jpg" class="d-block img-fluid rounded" alt="language-skills"></div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -92,82 +90,82 @@
 
 <secion id="experience">
 <div class="container py-3">
-  <h2 class="pb-2 border-bottom">Experiencia Laboral</h2>
+  <h2 class="pb-2 border-bottom">Work Experience</h2>
   <div class="card">
     <div class="card-body">
-      <h3>Gerente de personal</h3>
+      <h3>Workforce Manager</h3>
       <h4>Concentrix Colombia</h4>
       <h5>Jul 2022 – Oct 2023</h5>
       <ul>
-      <li>Lidere planes para la organización de horarios según el flujo de trabajo que resulto en una <span class="keyword">reducción de los costos laborales</li> 
-      <li>Asistí en la planeación para el aumento de la productividad de los empleados mediante el desarrollo de programas de formación y desarrollo</li>
-      <li>Dirigí la reducción en un 3% de la rotación de empleados mediante la creación de iniciativas de esparcimiento, empoderamiento e igualdad dentro y fuera del espacio de trabajo</li>
+      <li>Developed and implemented workforce plans that resulted in a <span class="keyword">reduction in labor costs.</span></li> 
+      <li>Increased employee productivity by developing and implementing new training and development programs. </li>
+      <li>Reduced employee turnover by creating and implementing employee engagement initiatives.</li>
       </ul>
 
-      <h3>Coordinador de operaciones & Analista de datos</h3>
+      <h3>Operation Coordinator & Data Analyst</h3>
       <h4>Concentrix Colombia</h4>
       <h5>May 2021 – Jul 2022</h5>
       <ul>
-      <li>Organicé horarios de trabajo que aseguraron niveles de personal adecuados para cumplir con las necesidades operativas</li> 
-      <li>Coordiné la incorporación y formación de nuevos empleados</li> 
-      <li>Cree visualizaciones de información empresarial, claras a través de <span class="keyword">Power BI</span> y <span class="keyword">Qlik Sense</span></li> 
-      <li>Diseñé y documente un flujo de trabajo que aumentó la eficiencia y redujo los reprocesos entre áreas</li> 
+      <li>Developed and implemented workforce schedules that ensured adequate staffing levels and met operational needs</li> 
+      <li>Coordinated the on-boarding and training of new employees</li> 
+      <li>Created clear and informative visualizations through <span class="keyword">Power BI</span> and <span style="font-weight: 700;">Qlik Sense</span></li> 
+      <li>Designed and implemented a new office layout that improved workflow and increased efficiency</li> 
       </ul>
 
-      <h3>Supervisor de operaciones</h3>
+      <h3>Operation Supervisor</h3>
       <h4>Concentrix Colombia</h4>
       <h5>Nov 2020 – May 2021</h5>
       <ul>
-      <li>Gestioné los registros de los empleados y los <span class="keyword">reportes a nómina</span></li>
-      <li>Analicé los datos y tendencias de la fuerza laboral para identificar áreas de mejora</li> 
-      <li>Desarrollé planes de gestión del rendimiento para los miembros del equipo</li> 
-      <li>Resolví conflictos entre compañeros de manera rápida y efectiva</li> 
-      <li>Demostré una fuerte ética de trabajo y dedicación, lo que resultó en un ascenso a coordinador después de solo 6 meses</li> 
+      <li>Managed employee records and <span class="keyword">payroll</span> data.</li>
+      <li>Analyzed workforce data and trends to identify areas for improvement</li> 
+      <li>Developed and implemented performance management plans for team members</li> 
+      <li>Resolved employee conflicts quickly and effectively</li> 
+      <li>Demonstrated a strong work ethic and dedication to the account, resulting in being promoted to coordinator after 6 months</li> 
       </ul>
 
-      <h3>Analista Financiero</h3>
+      <h3>Financial Analyst</h3>
       <h4>Concentrix Colombia</h4>
-      <h5>Ene 2019 – Nov 2020</h5>
+      <h5>Jan 2019 – Nov 2020</h5>
       <ul>
-      <li>Redujé los errores de facturación mediante la realización de auditorías de facturación periódicas e identificando AOO</li> 
-      <li>Aumenté la eficiencia de la facturación mediante el desarrollo de nuevos procedimientos a través de <span class="keyword">archivos de Excel completamente automatizados</span></li> 
-      <li>Preparé informes financieros a la alta dirección que proporcionaron información sobre la salud financiera de la organización</li>
+      <li>Reduced billing errors by conducting regular billing audits and identifying AOO</li> 
+      <li>Increased billing efficiency by developing and implementing new procedures through <span class="keyword">complete automated Excel files</span>  </li> 
+      <li>Prepared and presented financial reports to senior management that provided insights into the organization's financial health</li>
       </ul>
 
-      <h3>Agente de centro de llamadas</h3>
+      <h3>Call Center Agent</h3>
       <h4>Concentrix Colombia</h4>
-      <h5>Feb 2018 – Ene 2019</h5>
+      <h5>Feb 2018 – Jan 2019</h5>
       <ul>
-      <li>Simplifique los procesos de documentación del área de ventas a través de la automatización, ahorrando tiempo y recursos</li> 
-      <li>Fui un agente de la aerolinea Avianca de alto rendimiento, <span class="keyword">superando constantemente los objetivos de ventas</span></li> 
-      <li>Reconocido como participante activo en iniciativas corporativas, contribuyendo a los objetivos de integración y equidad de género de la empresa</li>
+      <li>Streamlined sales area documentation processes through automation, saving time and resources</li> 
+      <li>I was a top-performing Avianca airline agent, consistently <span class="keyword">exceeding sales targets</span></li> 
+      <li>Known as an active participant in corporate initiatives, contributing to company's integration and gender equality goals</li>
       </ul>
 
-      <h3>Encargado de servicio</h3>
+      <h3>Service manager</h3>
       <h4>HCB Gourmet</h4>
       <h5>Mar 2016 – Nov 2017</h5>
       <ul>
-      <li>Aprendí sobre <span class="keyword">gestión de inventario y proveedores</span></li>
-      <li>Tipifiqué a los usuarios para identificar los platos preferidos y optimizar la preparación de la cocina para reducir el desperdicio de alimentos</li>
-      <li>Implementé estrategias para mejorar la experiencia del almuerzo con un servicio más rápido, atención personalizada y promociones especiales</li> 
+      <li>Learned about <span class="keyword">inventory management and supplier management</span></li>
+      <li>I typified users to identify preferred dishes and optimize kitchen preparation to reduce food waste</li>
+      <li>Implemented strategies to enhance the lunch experience with faster service, personalized attention and special promotions</li> 
       </ul>
 
-      <h3>Camarero</h3>
+      <h3>Waiter</h3>
       <h4>Holiday Inn Hotel</h4>
       <h5>Mar 2014 – Mar 2016</h5>
       <ul>
-      <li>Adquirí experiencia en vinos, cervezas, licores y bebidas no alcohólicas para recomendar maridajes adecuados</li> 
-      <li><span class="keyword">Mejoré mis habilidades</span> como atención a los detalles, ser cortés y atento, y hacer un esfuerzo adicional para superar las expectativas de los clientes</li> 
-      <li>Aprendí todos los artículos del menú, ingredientes y métodos de preparación para proporcionar información precisa a los comensales</li> 
+      <li>Gained expertise in wine, beer, spirits, and non-alcoholic drinks to recommend suitable pairings</li> 
+      <li><span class="keyword">Improved abilities</span> as paying attention to details, being polite and attentive, and go the extra mile to exceed customer expectations</li> 
+      <li>Learned all menu items, ingredients, and preparation methods to provide accurate information to customers</li> 
       </ul>
 
-      <h3>Publicista y encargado de la documentacion</h3>
+      <h3>Publicist and Data Manager</h3>
       <h4>Rosmuc</h4>
-      <h5>Abr 2010 – Dic 2012</h5>
+      <h5>Apr 2010 – Dec 2012</h5>
       <ul>
-      <li>Implementé un sistema de documentación fácil de usar para mantener organizado la papeleria de la organizacion</li>
-      <li>Aporte estrategias de comunicación asertivas internas y externas. Asi como el acercamiento a radios territoriales para informar a la poblacion de los nuevos programas subvencionados por el estado</li>
-      <li><span class="keyword">Diseñé infografías y folletos</span> para programas sociales que se ejecutarán en comunidades vulnerables</li>
+      <li>Implemented a user-friendly documentation system</li>
+      <li>Oversaw internal and external communication strategies</li>
+      <li><span class="keyword">Designed Infographics and brochures</span> for social programs to be executed in vulnerable communities</li>
       </ul>
     </div>
   </div>
@@ -176,8 +174,8 @@
 
 <secion id="Education">
 <div class="container py-3">
-  <h2 class="pb-2 border-bottom">Educación</h2>
-  <h2 class="fs-5 pb-2 fw-light">Pasé tres años estudiando Ingeniería Industrial, lo que me brindó una sólida base. Pero mi verdadero viaje de aprendizaje ha sido fuera del aula. Me ha encantado la libertad de explorar diferentes temas y resolver problemas a mi manera. Aunque a veces puede ser solitario, la satisfacción de dominar una nueva habilidad vale totalmente la pena</h2>
+  <h2 class="pb-2 border-bottom">Education</h2>
+  <h2 class="fs-5 pb-2 fw-light">I spent three years studying Industrial Engineering, which gave me a solid foundation. But my real learning journey has been outside the classroom. I've loved the freedom to explore different topics and solve problems in my own way. While it can be lonely at times, the satisfaction of mastering a new skill is totally worth it.</h2>
   <div class="card">
     <div class="card-body row g-1 row-cols-1 row-cols-lg-3">
       <div class="col d-flex align-items-start">
@@ -188,13 +186,13 @@
           </svg>
         </div>
         <div>
-          <h4>Bachillerato Academico</h4>
-          <h5>Dic 2007</h5>
-          <p class="fs-5">Escuela académica con énfasis en el conocimiento de vanguardia</p>
+          <h4>Academic Bachelor</h4>
+          <h5>Dec 2007</h5>
+          <p class="fs-5">Academic school with emphasis on cutting-edge knowledge</p>
           <ul>
-          <li>Educación completa en ingles</li>
-          <li>Enseñanza de herramientas informáticas tal como suit de Microsoft Office y Adobe. Así como programación</li>
-          <li>Geopolítica mundial mediante la imitación de Naciones Unidas y sus protocolos</li>
+            <li>Complete education in English</li>
+            <li>Teaching of computer tools such as Microsoft Office suite and Adobe. As well as programming</li>
+            <li>Study of global geopolitics through simulations of the United Nations and its protocols</li>
           </ul>
         </div>
       </div>
@@ -209,7 +207,7 @@
         <div>
           <h4>ICDL Certification</h4>
           <h5>Sep 2007</h5>
-          <p class="fs-5">Creado para fomentar las competencias digitales fundamentales que requiere el mundo laboral actual:</p>
+          <p class="fs-5"> Designed to build the critical digital skills of the modern workplace:</p>
           <ul>
           <li>Word </li>
           <li>Power Point </li>
@@ -228,7 +226,7 @@
         <div>
           <h4>Microsoft Office </h4>
           <h5>Sep 2006</h5>
-          <p class="fs-5">Certificado de especialista: Excel  </p>
+          <p class="fs-5">Specialist Certification: Excel  </p>
         </div>
       </div>
     </div>
